Changed engine fixed time step and simulate 20hz input

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,13 @@
             "request": "launch",
             "program": "enjoy_nybble.py",
             "console": "integratedTerminal"
+        },
+        {
+            "name": "Python: Current File",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal"
         }
     ]
 }
