Reorganise + Serial comms/gym
Changed action/observation space
Robot now makes decisions at 2Hz
Training is not implemented with the serial gym

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,14 +8,14 @@
             "name": "Python: Train",
             "type": "python",
             "request": "launch",
-            "program": "train_nybble.py",
+            "program": "nybble_train.py",
             "console": "integratedTerminal"
         },
         {
             "name": "Python: Demo",
             "type": "python",
             "request": "launch",
-            "program": "enjoy_nybble.py",
+            "program": "nybble_demo.py",
             "console": "integratedTerminal"
         },
         {
